--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: flutter_ignitr
+name: ignitr
 description: "A new Flutter package project."
 version: 0.0.1
-homepage: https://github.com/thedevsbuddy/flutter_ignitr
+homepage: https://github.com/thedevsbuddy/ignitr
 
 environment:
   sdk: ^3.6.0
@@ -13,7 +13,7 @@ dependencies:
   dcli: ^6.1.0
   flutter:
     sdk: flutter
-  http: ^1.2.2
+  http: ^1.3.0
   path: ^1.9.0
   pluralize: ^0.0.8
   recase: ^4.1.0
@@ -26,5 +26,4 @@ dev_dependencies:
 flutter:
 
 executables:
-  flutter_ignitr: main
   ignitr: main
